--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,17 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  flutter_dotenv: ^5.1.0
+  equatable: ^2.0.5
+  flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.2.0
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.7.1
+  build_runner: ^2.4.6
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -74,6 +79,7 @@ flutter:
   assets:
      - assets/images/
      - assets/localization/
+     - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
