--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.2.0
   loading_animation_widget: ^1.2.0+4
+  flutter_screenutil: ^5.8.4
 
 dev_dependencies:
   flutter_test:
