--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   shared_preferences: ^2.2.0
   loading_animation_widget: ^1.2.0+4
   flutter_screenutil: ^5.8.4
+  flutter_colorpicker: ^1.0.3
+  flutter_slidable: ^3.0.0
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
