--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   flutter_slidable: ^3.0.0
   fl_chart: ^0.63.0
+  flutter_native_splash: ^2.3.2
 
 dev_dependencies:
   flutter_test:
