--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   firebase_core: ^2.15.1
   flutter_launcher_icons: ^0.13.1
   image_picker: ^1.0.4
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
